--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg2"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="16dp"
-    android:background="@drawable/bg2">
+    android:padding="16dp">
 
 
     <Button
@@ -13,40 +13,50 @@
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorBlack"
-        android:text="Начать" />
+        android:text="Начать"
+        android:textColor="@color/colorBlack" />
 
     <Button
         android:id="@+id/resultsButton"
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorBlack"
-        android:text="Результаты" />
+        android:text="Результаты"
+        android:textColor="@color/colorBlack" />
 
     <Button
         android:id="@+id/controlButton"
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorBlack"
-        android:text="Итоговый контроль" />
+        android:text="Итоговый контроль"
+        android:textColor="@color/colorBlack" />
 
     <Button
         android:id="@+id/addqButton"
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorBlack"
-        android:text="Добавить вопрос" />
+        android:text="Добавить вопрос"
+        android:textColor="@color/colorBlack" />
 
     <Button
         android:id="@+id/aboutButton"
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorBlack"
-        android:text="О программе" />
+        android:text="О программе"
+        android:textColor="@color/colorBlack" />
+
+    <Button
+        android:id="@+id/settingsButton"
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10sp"
+        android:text="Настройки"
+        android:textColor="@color/colorBlack" />
+
 
     <!--<LinearLayout
         android:layout_width="match_parent"
