--- a/app/src/main/res/drawable/ic_launcher_new_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_new_background.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<vector
-    android:height="108dp"
-    android:width="108dp"
-    android:viewportHeight="108"
-    android:viewportWidth="108"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-</vector>
+<resources>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="colorRed">#ca2f2f</color>
+    <color name="colorGreen">#40b631</color>
+    <color name="colorGreenDark">#448142</color>
+    <color name="colorGrey">#ffd78a</color>
+    <color name="colorBack">#fde7bc</color>
+    <color name="colorBrown">#431c00</color>
+    <color name="colorYellow">#e6ff00</color>
+    <color name="colorLightBrown">#bf5000</color>
+    <color name="colorHighlight">#fdc14b</color>
+    <color name="colorTransparent">#00000000</color>
+</resources>
