--- a/app/src/main/res/layout/activity_int.xml
+++ b/app/src/main/res/layout/activity_int.xml
@@ -72,6 +72,27 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/fillwordButton"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawablePadding="6dp"
+            android:height="60dp"
+            android:padding="6dp"
+            android:gravity="center"
+            android:textColor="@color/colorBlack"
+            android:drawableLeft="@mipmap/ic_tren"
+            android:text="Филворды" />
+
+    </LinearLayout>
+
 
 
 </LinearLayout>
