--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -41,7 +41,7 @@
                 <ImageView
                     android:id="@+id/imageQ"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="230dp"
                     android:layout_marginTop="10dp"
                     android:contentDescription="QuestionImage"
                     app:srcCompat="@mipmap/ic_launcher" />
