--- a/app/src/main/res/layout/activity_fill_word.xml
+++ b/app/src/main/res/layout/activity_fill_word.xml
@@ -14,40 +14,25 @@
         android:layout_height="wrap_content"
         android:padding="8dp">
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/colorBlack"
-            tools:text="Древнейшие люди на белорусской земле" />
-
         <LinearLayout
             android:orientation="vertical"
+            android:paddingBottom="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="8dp"
             android:id="@+id/header">
 
-            <TextView
-                android:id="@+id/textQuestion"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textStyle="italic"
-                android:textColor="@color/colorBlack"
-                tools:text="" />
+         <TextView
+             android:id="@+id/te1"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="10dp"
+             android:textStyle="italic"
+             android:gravity="center"
+             android:textColor="@color/colorBlack"
+             tools:text="" />
 
         </LinearLayout>
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="8dp"
-            android:id="@+id/grid"/>
+
 
 
         <android.support.v7.widget.GridLayout
