--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,23 +13,7 @@
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Начать"
-        android:textColor="@color/colorBlack" />
-
-    <Button
-        android:id="@+id/resultsButton"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Результаты"
-        android:textColor="@color/colorBlack" />
-
-    <Button
-        android:id="@+id/controlButton"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Итоговый контроль"
+        android:text="1. Выбрать тему"
         android:textColor="@color/colorBlack" />
 
     <Button
@@ -37,7 +21,23 @@
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Головоломки"
+        android:text="2. Головоломки"
+        android:textColor="@color/colorBlack" />
+
+    <Button
+        android:id="@+id/controlButton"
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="3. Итоговый контроль"
+        android:textColor="@color/colorBlack" />
+
+    <Button
+        android:id="@+id/resultsButton"
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="4. Результаты"
         android:textColor="@color/colorBlack" />
 
     <Button
@@ -45,15 +45,7 @@
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Добавить вопрос"
-        android:textColor="@color/colorBlack" />
-
-    <Button
-        android:id="@+id/aboutButton"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="О программе"
+        android:text="5. Добавить вопрос"
         android:textColor="@color/colorBlack" />
 
     <Button
@@ -61,8 +53,16 @@
         style="?android:attr/buttonBarButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="6. Настройки"
+        android:textColor="@color/colorBlack" />
+
+    <Button
+        android:id="@+id/aboutButton"
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="7. О программе"
         android:layout_marginTop="10sp"
-        android:text="Настройки"
         android:textColor="@color/colorBlack" />
 
 
