--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -10,6 +10,15 @@
         android:layout_height="wrap_content"
         android:background="#fff"/>
 
+    <com.google.android.youtube.player.YouTubePlayerView
+        android:id="@+id/youtube_player2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/youtube_player"
+        android:layout_marginTop="50dp"
+        android:background="#fff"
+        android:visibility="gone"/>
+
 </RelativeLayout>
 
 <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
