--- a/app/src/main/res/layout/activity_theme.xml
+++ b/app/src/main/res/layout/activity_theme.xml
@@ -47,62 +47,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/vocabularyButton"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawablePadding="6dp"
-            android:height="60dp"
-            android:padding="6dp"
-            android:gravity="center"
-            android:textColor="@color/colorBlack"
-            android:drawableLeft="@mipmap/ic_vocabulary"
-            android:text="Словарь" />
-
-    </LinearLayout>
+        android:orientation="horizontal"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/memButton"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawablePadding="6dp"
-            android:height="60dp"
-            android:padding="6dp"
-            android:gravity="center"
-            android:textColor="@color/colorBlack"
-            android:drawableLeft="@mipmap/ic_memo"
-            android:text="Памятки" />
-
-    </LinearLayout>
+        android:orientation="horizontal"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/videoButton"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawablePadding="6dp"
-            android:height="60dp"
-            android:padding="6dp"
-            android:gravity="center"
-            android:textColor="@color/colorBlack"
-            android:drawableLeft="@mipmap/ic_video"
-            android:text="Видеоуроки" />
-
-    </LinearLayout>
+        android:orientation="horizontal"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -110,19 +65,7 @@
         android:gravity="center_horizontal"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/video2Button"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawablePadding="6dp"
-            android:height="60dp"
-            android:padding="6dp"
-            android:gravity="center"
-            android:textColor="@color/colorBlack"
-            android:drawableLeft="@mipmap/ic_video"
-            android:text="Видеоурок 2"
-            android:visibility="gone"/>
+
 
     </LinearLayout>
 
